--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,16 @@
 
   "name": "Google Search Duration",
   "description": "Easily change the duration of google search",
-  "version": "1.0",
+  "version": "1.1",
     "background": {
     "scripts": ["background.js"],
     "persistent": false
   },
+  "icons": { "32": "icon32.png",
+             "48": "icon48.png",
+            "128": "icon128.png" },
   "page_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon48.png",
     "default_popup": "popup.html"
   },
   "permissions" : [
